Modificación de  transparencias

--- a/2021-1/beamer/C14_md1.tex
+++ b/2021-1/beamer/C14_md1.tex
@@ -1,7 +1,7 @@
-\documentclass{beamer} 
-%\documentclass[handout]{beamer} % sin pausas
+%\documentclass{beamer} 
+\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
-\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -245,7 +245,7 @@
             Si $m_1 > \sqrt{n}$ y $m_2 >\sqrt{n}$ entonces 
             
             $$
-            m_1m_2 > \sqrt{n}\sqrt{n} = \sqrt{n}^2 = n.
+            n = m_1m_2 > \sqrt{n}\sqrt{n} = \sqrt{n}^2 = n.
             $$\pause
             \vskip .2cm
             Absurdo. Vino de suponer que $m_1 > \sqrt{n}$ y $m_2 >\sqrt{n}$. 
