--- a/2021-1/beamer/C17_md1.tex
+++ b/2021-1/beamer/C17_md1.tex
@@ -93,13 +93,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%LETRAS
 
 
-\title[Clase 17 - Congruencia ]{Matemática Discreta I \\ Clase 17 - Congruencia 2}
-%\author[C. Olmos / A. Tiraboschi]{Carlos Olmos / Alejandro Tiraboschi}
+
+\title[Clase 18 - Congruencia 3]{Matemática Discreta I \\ Clase 18 - Congruencia 3}
+%\author[A. Tiraboschi]{Alejandro Tiraboschi}
 \institute[]{\normalsize FAMAF / UNC
 	\\[\baselineskip] ${}^{}$
 	\\[\baselineskip]
 }
-\date[14/05/2020]{14 de mayo de 2020}
+\date[19/05/2020]{19 de mayo de 2020}
 
 
 
@@ -108,223 +109,275 @@
 	
 	\frame{\titlepage} 
 	
-	\begin{frame}\frametitle{Ecuación lineal de congruencia}
-		Estudiaremos el problema de encontrar los $x \in \mathbb Z$ tal que
+	\begin{frame}\frametitle{El Teorema (pequeño) de Fermat}
+		El siguiente lema nos sirve de preparación para la demostración
+		del Teorema (o fórmula) de Fermat.
 		
-		\begin{equation}\label{ecuacionlineal}
-			ax \equiv b \pmod{m}.
+		\vskip .4cm \pause 
+		\begin{lema} \label{l4.3} Sea $p$ un número primo, entonces
+			\begin{enumerate}
+				\item[(a)] $p|\binom{p}{r}$, con $0< r <p$, \vskip .4cm \pause 
+				\item[(b)] $(a+b)^p \equiv a^p+b^p \pmod{p}$. 
+			\end{enumerate}
+		\end{lema}
+		
+	\end{frame}
+	
+	
+	\begin{frame}
+		\begin{proof} \pause 
+			\noindent({a})  Escribamos el número binomial de otra forma: 
+			$$
+			\binom{p}{r}=\frac{p!}{r!(p-r)!}=p\cdot\,\frac{(p-1)!}{r!(p-r)!},
+			$$ \pause 
+			luego 
+			\begin{equation*}\label{binp}
+				\binom{p}{r} \cdot r!(p-r)! = p \cdot(p-1)!.
+			\end{equation*}\pause 
+			Por lo tanto, 
+			\vskip .2cm 
+			\begin{enumerate}
+				\item[(1)] $p | \binom{p}{r} \cdot r!(p-r)!$. Además, \pause 
+				\vskip .3cm 
+				
+				\item[(2)] $r < p$ $\Rightarrow$ $p \not| r!$. \vskip .3cm \pause 
+				
+				\item[(3)] $r >0$ $\Rightarrow$ $p-r < p$ $\Rightarrow$ $p \not| (p-r)!$.
+			\end{enumerate}
+			
+			
+			
+			
+			
+		\end{proof}
+	\end{frame}
+	
+	\begin{frame}
+		
+		De (1), (2) y (3),  
+		
+		\begin{equation*}
+			p | \binom{p}{r} \cdot r!(p-r)!\qquad \wedge \qquad p \not| r!(p-r)!
+		\end{equation*}\pause 
+		
+		por lo tanto ($p$ es primo)
+		\begin{equation*}
+			p | \binom{p}{r}.
+		\end{equation*}
+		\vskip .3cm \pause 
+		\noindent({b}) Por el teorema del binomio sabemos que
+		$$
+		(a+b)^p =\sum_{i=0}^{p} \binom{p}{i} a^ib^{p-i}.
+		$$\pause 
+		Por ({a}) es claro que $ \binom{p}{i} a^ib^{p-i}\equiv 0 \pmod{p}$,
+		si $0<i<p$.
+		\vskip .3cm \pause 
+		Luego se deduce el resultado.
+		\qed
+	\end{frame}
+	
+	\begin{frame}
+		El siguiente es el llamado teorema de Fermat.
+		
+		\begin{teorema}\label{t4.3} Sea $p$ un número primo y $a$ número
+			entero. Entonces
+			$$
+			a^p\equiv a\pmod{p}.
+			$$
+		\end{teorema}\pause 
+		\begin{proof} \pause 
+			
+			Dividiremos la demostración en 2 casos (1) $a\ge 0$, (2)  $a < 0$.
+			\vskip .3cm\pause 
+			{(1) $a\ge 0$.} 	Por inducción sobre $a$. 
+			\vskip .3cm
+			\textit{Caso base $a=0$.} $0^p\equiv 0\pmod{p}$,  es trivial.
+			\vskip .3cm
+			
+			
+		\end{proof}
+	\end{frame}
+	
+	
+	\begin{frame}
+		\textit{Paso  inductivo.} Si $k \ge 0$, la hipótesis inductiva es:
+		\begin{equation}
+			k^p \equiv k \pmod{p}. \tag{HI}
 		\end{equation}
 		
-		\pause
-		
-		Una ecuación como 	(\ref{ecuacionlineal}) es llamada una \textit{ecuación lineal de congruencia.}
-		\vskip .4cm\pause
-		El problema no siempre admite solución. 
-		\vskip .4cm
-		\pause
-		Por  ejemplo, \,$2x\equiv 3 \pmod{2}$\, no posee ninguna solución en
-		$\mathbb Z$, pues cualquiera se $k \in \mathbb Z$, $2k-3$ es
-		impar, luego no es divisible por $2$.
-		\vskip .4cm\pause
-		Notemos además que si $x_0$ es solución de la ecuación
-		(\ref{ecuacionlineal}), también lo es $x_0+km$ de manera que si la
-		ecuación posee una solución, posee infinitas soluciones. 
-		
-		
-	\end{frame}
-	
-	
-	\begin{frame}
-		
-		\begin{ejemplo} La solución general de la ecuación $3x\equiv 7
-			\pmod{11}$ es $6+k11$ con $k \in \mathbb Z$.
-		\end{ejemplo}\vskip .2cm\pause
-		\begin{proof} Si probamos con los enteros $x$ tal que  $0\le x < 11$, veremos que la ecuación admite una única solución, a saber $x=6$. 
-			\vskip .2cm\pause
-			
-			Otras soluciones se obtienen tomando $6+11k$. \pause 
-			\vskip .2cm
-			Por otra parte si $u$ es también solución de la ecuación, se tiene 
-			$$
-			3u \equiv 7 \hskip -.3cm\pmod{11},\quad 3 \cdot 6 \equiv 7\hskip -.3cm \pmod{11} \quad \Rightarrow \quad 3u \equiv 3\cdot 6\hskip -.3cm \pmod{11}.
-			$$
-			\pause Por lo tanto $3(u-6)$ es múltiplo de $11$. 
-			\vskip .2cm\pause
-			
-			Como $11$ no divide a $3$ se tiene que $11|(u-6)$, o sea $u=6+11k$. \qed
-		\end{proof}
-	\end{frame}
-	
-	
-	\begin{frame}
-		\begin{ejemplo} Encontrar $0 \le x < 109$ solución  de la ecuación $74x\equiv 5 \pmod{109}$.
-		\end{ejemplo}\pause
-		\begin{proof} \pause
-			
-			\begin{itemize}
-				\item[$\circ$] $1 =(74,109)$, por lo tanto, existen $s,t \in \mathbb Z$ tal que
-				\begin{equation}\label{eq:elc1}
-					1  = s \cdot 74 + t\cdot 109
-				\end{equation}
-				\vskip .2cm\pause
-				\item[$\circ$] Luego,
-				\begin{equation}\label{eq:elc2}
-					1  \equiv  s \cdot 74\pmod{109}.
-				\end{equation} \vskip .2cm\pause
-				\item[$\circ$] Multiplicando  por $5$ la ecuación (\ref{eq:elc2}), obtenemos
-				\begin{equation}\label{eq:elc3}
-					5 \equiv  (5s) \cdot 74 \pmod{109}.
-				\end{equation}
-				Eso  implica que $5s$ es solución de  $74x\equiv 5 \pmod{109}$.
-			\end{itemize}
-			
-			
-		\end{proof}
-	\end{frame}
-	
-	
-	\begin{frame}
-		Obtengamos entonces la ecuación (\ref{eq:elc1}).\pause
-		\begin{alignat}3
-			109 &= 74 \cdot 1 + 35& \qquad&\Rightarrow& \qquad 35 &= 109 - 74 \label{eq:cle1}\\ 
-			74 &=  35\cdot 2 +4 & \qquad&\Rightarrow& \qquad 4 &= 74 - 35\cdot 2 \label{eq:cle2}\qquad\\
-			35 &= 4 \cdot 8 + 3& \qquad&\Rightarrow& \qquad  3 &= 35 - 4 \cdot 8 \label{eq:cle3}  \\
-			4 &=  3\cdot 1 + 1& \qquad&\Rightarrow& \qquad 1 &= 4 - 3\label{eq:cle4}\\
-			3 &=  1\cdot 3  +0 & \qquad&& \qquad  &
-		\end{alignat}
-		\pause	Luego,\pause
+		Debemos probar,
+		\begin{equation}
+			(k+1)^p \equiv k+1 \pmod{p}. \tag{T}
+		\end{equation}
+		\pause 
+		Ahora bien,
 		\begin{align*}
-			1 & \overset{(\ref{eq:cle4})}{=} 4 -3 \overset{(\ref{eq:cle3})}{=} 4 - ( 35 - 4 \cdot 8) \\
-			&=  9 \cdot 4 - 35 \\
-			& \overset{(\ref{eq:cle2})}{=} 9 \cdot (74 - 35\cdot 2) - 35  = 9 \cdot  74 + (-18) \cdot 35 - 35 \\
-			&= 9 \cdot  74 + (-19) \cdot 35 \\
-			& \overset{(\ref{eq:cle1})}{=}  9 \cdot  74 + (-19) \cdot (109 - 74) \\ %= 9 \cdot  74 + (-19) \cdot 109 + 19 \cdot 74 \\
-			&= 28 \cdot  74 + (-19) \cdot 109 .
+			(k+1)^p &\equiv   k^p + 1^p \pmod{p}&\quad&(\text{por (b) del  lema}) \\
+			&\equiv k +1 \pmod{p}&\quad&(\text{por HI}).  \\
 		\end{align*}
+		Es  decir $(k+1)^p \equiv  k+1 \pmod{p}$,  que es lo que queríamos probar.
 	\end{frame}
 	
 	
-	\begin{frame}
-		Recordemos que debemos resolver la ecuación
-		\begin{equation*}
-			74x\equiv 5 \pmod{109}.
-		\end{equation*}
-		\pause Como 
-		\begin{equation*}
-			1 = 28 \cdot  74 + (-19) \cdot 109,
-		\end{equation*}
-		\pause tenemos
-		\begin{equation*}
-			1  \equiv 28 \cdot  74\pmod{109}.
-		\end{equation*}
-		\pause Por lo tanto, 
-		\begin{equation*}
-			5 \equiv (5 \cdot28)  74\pmod{109}.
-		\end{equation*}
-		\vskip .3cm
-		\pause Es decir, $140$ es solución y $31 = 140 -109$ también lo es, pues \linebreak $109 \equiv 0\pmod{109}$. 
-		\vskip .3cm
-		Luego 
-		$$5 \equiv 31 \cdot  74\pmod{109} \qquad \text{y} \qquad0 \le 31 < 109.\qed $$
-	\end{frame}
+	
 	
 	
 	\begin{frame}
-		Analicemos ahora la situación general de la ecuación $ ax\equiv b\pmod{m}$. 
+		
+		
+		{(2) $a<0$.} \pause	Como $a<0$, entonces $-a>0$, luego por (1): 
+		
+		$(-a)^p \equiv -a \pmod{p}$ o,  equivalentemente
+		\begin{equation}\label{eq:fermat-menos-1}
+			(-1)^pa^p \equiv (-1)a \pmod{p}
+		\end{equation}
+		
+		\pause 
+		Ahora bien,
 		\vskip .3cm 
-		\begin{teorema}\label{elc} Sean $a,b$ números enteros y $m$ un entero positivo y denotemos $d =\operatorname{mcd}(a,m)$. La  ecuación 
-			\begin{equation}\label{elc}
-				ax \equiv b \pmod{m}
-			\end{equation}
-			admite solución si y sólo si $d|b$, y en este caso dada $x_0$ una solución, todas las soluciones son de la forma 
-			$$x = x_0 + k n,\qquad \mbox{ con } k \in \mathbb Z \mbox{ y } n = {\frac{m}{d}} $$
+		
+		$p>2$, entonces $(-1)^p=-1$,  en particular  $(-1)^p \equiv -1 \pmod{p}$.
+		
+		\vskip .3cm 
+		$p=2$, entonces $(-1)^p=1$, pero como $1\equiv -1 \pmod{2}$, $(-1)^p \equiv -1 \pmod{p}$.
+		\vskip .3cm 
+		\pause 
+		Luego  $(-1)^p \equiv -1 \pmod{p}$ para todo $p$ primo y la ecuación (\ref{eq:fermat-menos-1}) es equivalente a:
+		\begin{equation*}\label{eq:fermat-menos}
+			(-1)a^p \equiv (-1)a \pmod{p}
+		\end{equation*}
+		\vskip .3cm \pause 
+		Multiplicando por $-1$ la ecuación  obtenemos $a^p \equiv a \pmod{p}$. \qed
+		
+		
+	\end{frame}
+	
+	
+	\begin{frame}
+		Supongamos que $a$ y $p$ son coprimos, por Fermat 
+		$$
+		p|(a^p 	-a)=a(a^{(p-1)} -1).
+		$$
+		
+		Como $p$ no divide a $a$, tenemos que $p|(a^{(p-1)} -1)$, \pause es decir 
+		\vskip .4cm 
+		\begin{teorema}
+			Si  $a$ y $p$ coprimos y $p$ es primo, entonces  
+			$$a^{(p-1)}\equiv 1\pmod{p}.
+			$$
 		\end{teorema}
-	\end{frame}
-	
-	
-	\begin{frame}
-		\begin{proof}
-			($\Leftarrow$) Muy  similar al ejemplo anterior. \pause Como 
-			\begin{equation*}
-				d = s \cdot  a +t \cdot m,\qquad \text{para algunos $s,t \in \mathbb Z$,}
-			\end{equation*}
-			\pause tenemos
-			\begin{equation*}
-				d  \equiv s \cdot  a\pmod{m}.
-			\end{equation*}
-			\pause Como  $d|b$, tenemos $b = d q$. Por lo tanto, 
-			\begin{equation*}
-				b = d q \equiv qs \cdot  a\pmod{m}.
-			\end{equation*}
-			Es decir 
-			\begin{equation*}
-				a(qs)  \equiv b\pmod{m}.
-			\end{equation*}
-			\vskip .3cm
-			\pause Es decir, $x_0 = qs$ es solución de $ax \equiv b \pmod{m}$. 
-		\end{proof}
-	\end{frame}
-	
-	
-	\begin{frame}
-		Veamos ahora que si $n = {\frac{m}{d}}$ y $k \in \mathbb Z$, entonces $x_0 + kn$ también es solución.
-		\vskip .3cm
-		Es decir
-		\begin{equation*}
-			a(x_0 + kn) \equiv b \pmod{m}.
-		\end{equation*} \pause
 		
-		Como $d|a$ $\Rightarrow$ $a = dr$, luego $akn = dr\frac{m}{d} = rm \equiv 0 \pmod{m}$. 
-		\vskip .3cm\pause
-		Luego
-		$$
-		a(x_0 + kn) \equiv 	ax_0 + akn \equiv	ax_0 \equiv b \pmod{m}.
-		$$
-		\vskip .6cm\pause
-		($\Rightarrow$) Ver apunte. 
+		\vskip .3cm \pause 
+		Este último enunciado es también conocido como teorema de Fermat.
+	\end{frame}
+	
+	\begin{frame}
+		
+		
+		\begin{definicion} Sea $n \ge 1$, La \textit{función de Euler} se define
+			\begin{equation*}
+				\phi(n) := |\{x: \operatorname{mcd}(x,n) \wedge 1 \le x < n \}|.
+			\end{equation*}
+		\end{definicion}
+		\vskip .3cm 
+		El 	teorema de Fermat, 2° versión, admite la siguiente generalización, llamada
+		teorema de Euler: 
+		\vskip .3cm 
+		\begin{teorema}
+			Si $n$ un entero
+			positivo y $a$ un número entero coprimo con $n$, entonces
+			$$
+			a^{\phi(n)} \equiv 1\pmod{n}.
+			$$
+		\end{teorema}
+		
 		
 	\end{frame}
 	
-	
 	\begin{frame}
-		\begin{proposicion}
-			Sean $a$, $b$, $m \in {\mathbb Z}$, $d>0$ tales que  \,$d\mid a$,\,  \,$d\mid b$\, y \,$d\mid m$. Entonces, 
-			\begin{equation*}
-				ax \equiv b\,({m}) \quad \Leftrightarrow\quad\frac{a}{d} x \equiv \frac{b}{d}\,\left(\frac{m}{d}\right).
-			\end{equation*}
-			\vskip -.4cm
-		\end{proposicion} \pause
-		\begin{proof} \pause
-			\vskip -.8cm
-			\begin{align*}
-				a x \equiv b\,({m}) &\Leftrightarrow m| ax -b \\&\Leftrightarrow  a x -b = m \cdot q   \\
-				&\Leftrightarrow \frac{a}{d} x -\frac{b}{d} =\frac{m}{d}\cdot q   \\
-				&\Leftrightarrow \frac{a}{d} x \equiv \frac{b}{d}\,\left(\frac{m}{d}\right)\qquad  
-			\end{align*}
-			\qed
-		\end{proof}
-	\end{frame}
-	
-	
-	\begin{frame}
-		La proposición anterior nos permite reducir las ecuaciones al caso $	ax \equiv b\,({m})$ con $(a,m)=1$. \pause
-		
-		\vskip .4cm
-		
 		\begin{ejemplo}
-			Encontrar todos los $x \in \mathbb Z$ tales que
-			\begin{equation}
-				6x \equiv 30 \pmod{42}. \tag{*}
-			\end{equation}
-		\end{ejemplo} \pause \vskip -.4cm
-		\begin{solucion} \pause
-			Como $6 =(6,42)$ y $6|30$, la ecuación (*) tiene solución y tenemos que 
+			Usar el teorema de Fermat, 2° versión, para calcular el resto de dividir $3^{47}$ por $23$.
+		\end{ejemplo}
+		
+		\begin{solucion}
+			Podemos calcular $3^i \equiv a_i \pmod{23}$ para $0 \le i <23$. Como alguno se va a repetir, podemos usar eso para hacer el cálculo.
+			\vskip .3cm 
+			El teorema de Fermat nos evita unos cuantos pasos.
+			\vskip .3cm 
+			Como $23$ es un  número  primo (y  es coprimo con 3)
+			$$
+			3^{22} \equiv 1 \pmod{23},
+			$$
+			Luego
 			\begin{equation*}
-				6x \equiv 30 \pmod{42} \quad \Leftrightarrow \quad 	x \equiv 5 \pmod{7}.
+				3^{47} \equiv  3^{22\cdot 2 + 3} \equiv  3^{22\cdot 2} 3^3\equiv  ( 3^{22})^2 3^3\equiv    3^3\equiv   27 \equiv  4 \pmod{23}
 			\end{equation*}
-			Una solución obvia es $x_0 =5$, luego todas las soluciones son $x= 5 + 7k$, $k \in \mathbb Z$.\qed
+			Luego  el resto de dividir $3^{47}$ por $23$ es $4$. \qed
+			
 		\end{solucion}
 	\end{frame}
+	
+	\begin{frame}\frametitle{Algoritmo RSA}
+		Dados primos distintos $p$ y $q$ suficientemente grandes tomamos $n = pq$. 
+		\begin{itemize}
+			\item[$\circ$]  Sea $e$ con $1 < e < (p-1)(q-1)$ tal que $$\operatorname{mcd}(e, (p-1)(q-1)) = 1.$$
+			\item[$\circ$]  Sea $d$ tal $0 \le d <(p-1)(q-1)$ y que $$ed \equiv 1 \pmod{(p-1)(q-1)}.$$ 
+		\end{itemize}
+		
+		\begin{proposicion} Si $0 \le m <n$, entonces
+			$$m\equiv m^{ed} \pmod{n}.$$
+		\end{proposicion} 
+		
+		
+	\end{frame}
+	
+	
+	\begin{frame}\frametitle{Algoritmo RSA - procedimiento}
+		
+		Decimos que:
+		\begin{itemize}
+			\item[$\circ$]  $(e,n)$ es la \textit{clave pública.}
+			\item[$\circ$]  $d$ es la \textit{clave privada.}
+		\end{itemize}
+		
+		\vskip .2cm	
+		$A$ le quiere enviar  un mensaje encriptado a $B$.
+		\vskip .2cm			 
+		\textbf{Preliminares}
+		
+		\begin{enumerate}
+			\item[$\circ$] $A$ conoce la clave pública $(e,n)$. 
+			\item[$\circ$] $B$ conoce la clave pública y una clave privada $d$. 
+		\end{enumerate}
+		\vskip .2cm	
+		\textbf{Protocolo }
+		
+		\begin{enumerate}
+			\item[$\circ$] $A$  le quiere enviar el mensaje $m$  a $B$. 
+			\item[$\circ$] $A$ calcula $c \equiv m^e \pmod{n}$ y  le envía $c$ a $B$
+			\item[$\circ$] $B$ descifra el mensaje:  $c^d \equiv (m^e)^d \equiv m \pmod{n}$.
+		\end{enumerate}
+		
+	\end{frame}
+	
+	
+	\begin{frame}
+		
+		\begin{observacion}
+			
+			
+			\begin{itemize}
+				\item[$\circ$]\vskip .4cm	
+				Los dos primos $p$ y $q$ deberían tener alrededor de $100$ dígitos cada uno (longitud considerada segura en este momento).
+				\item[$\circ$]\vskip .4cm	
+				El número $e$ puede elegirse pequeño y se selecciona haciendo prueba y error con el algoritmo de Euclides, es decir probando hasta encontrar un $e$ tal que $\operatorname{mcd}(e, (p-1)(q-1)) = 1$.
+				\item[$\circ$]\vskip .4cm	
+				La existencia de $d$ está garantizada por  la ecuación lineal de congruencia), pues $e$ y $(p-1)(q-1)$ son coprimos.
+			\end{itemize}
+			
+		\end{observacion}
+	\end{frame}
+	
 	
 	
 \end{document}
