--- a/2021-1/beamer/C18_md1.tex
+++ b/2021-1/beamer/C18_md1.tex
@@ -93,14 +93,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%LETRAS
 
 
-
-\title[Clase 18 - Congruencia 3]{Matemática Discreta I \\ Clase 18 - Congruencia 3}
-%\author[A. Tiraboschi]{Alejandro Tiraboschi}
+\title[Clase 19 - Grafos 1]{Matemática Discreta I \\ Clase 19 - Grafos 1}
+%\author[C. Olmos / A. Tiraboschi]{Carlos Olmos / Alejandro Tiraboschi}
 \institute[]{\normalsize FAMAF / UNC
 	\\[\baselineskip] ${}^{}$
 	\\[\baselineskip]
 }
-\date[19/05/2020]{19 de mayo de 2020}
+\date[21/05/2020]{21 de mayo de 2020}
 
 
 
@@ -109,275 +108,245 @@
 	
 	\frame{\titlepage} 
 	
-	\begin{frame}\frametitle{El Teorema (pequeño) de Fermat}
-		El siguiente lema nos sirve de preparación para la demostración
-		del Teorema (o fórmula) de Fermat.
-		
-		\vskip .4cm \pause 
-		\begin{lema} \label{l4.3} Sea $p$ un número primo, entonces
-			\begin{enumerate}
-				\item[(a)] $p|\binom{p}{r}$, con $0< r <p$, \vskip .4cm \pause 
-				\item[(b)] $(a+b)^p \equiv a^p+b^p \pmod{p}$. 
-			\end{enumerate}
-		\end{lema}
-		
-	\end{frame}
-	
-	
-	\begin{frame}
-		\begin{proof} \pause 
-			\noindent({a})  Escribamos el número binomial de otra forma: 
-			$$
-			\binom{p}{r}=\frac{p!}{r!(p-r)!}=p\cdot\,\frac{(p-1)!}{r!(p-r)!},
-			$$ \pause 
-			luego 
-			\begin{equation*}\label{binp}
-				\binom{p}{r} \cdot r!(p-r)! = p \cdot(p-1)!.
-			\end{equation*}\pause 
-			Por lo tanto, 
-			\vskip .2cm 
-			\begin{enumerate}
-				\item[(1)] $p | \binom{p}{r} \cdot r!(p-r)!$. Además, \pause 
-				\vskip .3cm 
-				
-				\item[(2)] $r < p$ $\Rightarrow$ $p \not| r!$. \vskip .3cm \pause 
-				
-				\item[(3)] $r >0$ $\Rightarrow$ $p-r < p$ $\Rightarrow$ $p \not| (p-r)!$.
-			\end{enumerate}
-			
-			
-			
-			
-			
-		\end{proof}
-	\end{frame}
-	
-	\begin{frame}
-		
-		De (1), (2) y (3),  
-		
-		\begin{equation*}
-			p | \binom{p}{r} \cdot r!(p-r)!\qquad \wedge \qquad p \not| r!(p-r)!
-		\end{equation*}\pause 
-		
-		por lo tanto ($p$ es primo)
-		\begin{equation*}
-			p | \binom{p}{r}.
-		\end{equation*}
-		\vskip .3cm \pause 
-		\noindent({b}) Por el teorema del binomio sabemos que
-		$$
-		(a+b)^p =\sum_{i=0}^{p} \binom{p}{i} a^ib^{p-i}.
-		$$\pause 
-		Por ({a}) es claro que $ \binom{p}{i} a^ib^{p-i}\equiv 0 \pmod{p}$,
-		si $0<i<p$.
-		\vskip .3cm \pause 
-		Luego se deduce el resultado.
-		\qed
-	\end{frame}
-	
-	\begin{frame}
-		El siguiente es el llamado teorema de Fermat.
-		
-		\begin{teorema}\label{t4.3} Sea $p$ un número primo y $a$ número
-			entero. Entonces
-			$$
-			a^p\equiv a\pmod{p}.
-			$$
-		\end{teorema}\pause 
-		\begin{proof} \pause 
-			
-			Dividiremos la demostración en 2 casos (1) $a\ge 0$, (2)  $a < 0$.
-			\vskip .3cm\pause 
-			{(1) $a\ge 0$.} 	Por inducción sobre $a$. 
-			\vskip .3cm
-			\textit{Caso base $a=0$.} $0^p\equiv 0\pmod{p}$,  es trivial.
-			\vskip .3cm
-			
-			
-		\end{proof}
-	\end{frame}
-	
-	
-	\begin{frame}
-		\textit{Paso  inductivo.} Si $k \ge 0$, la hipótesis inductiva es:
-		\begin{equation}
-			k^p \equiv k \pmod{p}. \tag{HI}
-		\end{equation}
-		
-		Debemos probar,
-		\begin{equation}
-			(k+1)^p \equiv k+1 \pmod{p}. \tag{T}
-		\end{equation}
-		\pause 
-		Ahora bien,
-		\begin{align*}
-			(k+1)^p &\equiv   k^p + 1^p \pmod{p}&\quad&(\text{por (b) del  lema}) \\
-			&\equiv k +1 \pmod{p}&\quad&(\text{por HI}).  \\
-		\end{align*}
-		Es  decir $(k+1)^p \equiv  k+1 \pmod{p}$,  que es lo que queríamos probar.
-	\end{frame}
-	
-	
-	
-	
-	
-	\begin{frame}
-		
-		
-		{(2) $a<0$.} \pause	Como $a<0$, entonces $-a>0$, luego por (1): 
-		
-		$(-a)^p \equiv -a \pmod{p}$ o,  equivalentemente
-		\begin{equation}\label{eq:fermat-menos-1}
-			(-1)^pa^p \equiv (-1)a \pmod{p}
-		\end{equation}
-		
-		\pause 
-		Ahora bien,
-		\vskip .3cm 
-		
-		$p>2$, entonces $(-1)^p=-1$,  en particular  $(-1)^p \equiv -1 \pmod{p}$.
-		
-		\vskip .3cm 
-		$p=2$, entonces $(-1)^p=1$, pero como $1\equiv -1 \pmod{2}$, $(-1)^p \equiv -1 \pmod{p}$.
-		\vskip .3cm 
-		\pause 
-		Luego  $(-1)^p \equiv -1 \pmod{p}$ para todo $p$ primo y la ecuación (\ref{eq:fermat-menos-1}) es equivalente a:
-		\begin{equation*}\label{eq:fermat-menos}
-			(-1)a^p \equiv (-1)a \pmod{p}
-		\end{equation*}
-		\vskip .3cm \pause 
-		Multiplicando por $-1$ la ecuación  obtenemos $a^p \equiv a \pmod{p}$. \qed
-		
-		
-	\end{frame}
-	
-	
-	\begin{frame}
-		Supongamos que $a$ y $p$ son coprimos, por Fermat 
-		$$
-		p|(a^p 	-a)=a(a^{(p-1)} -1).
-		$$
-		
-		Como $p$ no divide a $a$, tenemos que $p|(a^{(p-1)} -1)$, \pause es decir 
-		\vskip .4cm 
-		\begin{teorema}
-			Si  $a$ y $p$ coprimos y $p$ es primo, entonces  
-			$$a^{(p-1)}\equiv 1\pmod{p}.
-			$$
-		\end{teorema}
-		
-		\vskip .3cm \pause 
-		Este último enunciado es también conocido como teorema de Fermat.
-	\end{frame}
-	
-	\begin{frame}
-		
-		
-		\begin{definicion} Sea $n \ge 1$, La \textit{función de Euler} se define
-			\begin{equation*}
-				\phi(n) := |\{x: \operatorname{mcd}(x,n) \wedge 1 \le x < n \}|.
-			\end{equation*}
+	\begin{frame}\frametitle{Grafos y sus representaciones}
+		Usaremos la siguiente definición en lo que sigue: dado un conjunto $X$ un {\em $2$-subconjunto} es un subconjunto de $X$ de dos elementos.  \pause
+		\vskip .4cm
+		\begin{definicion} Un {\em grafo} $G$ consiste de un  \index{grafo}
+			conjunto finito $V$, cuyos miembros son llamados
+			{\em vértices},  \index{vértices de un grafo}
+			y un conjunto de $2$-subconjuntos de $V$, cuyos miembros son
+			llamados {\em aristas}.  \index{aristas de un grafo}
+			\pause
+			\vskip .4cm
+			Nosotros
+			usualmente escribiremos $G=(V,E)$ y diremos que $V$ es el {\em
+				conjunto de vértices} y $E$ es el {\em conjunto de aristas}.
 		\end{definicion}
-		\vskip .3cm 
-		El 	teorema de Fermat, 2° versión, admite la siguiente generalización, llamada
-		teorema de Euler: 
-		\vskip .3cm 
-		\begin{teorema}
-			Si $n$ un entero
-			positivo y $a$ un número entero coprimo con $n$, entonces
-			$$
-			a^{\phi(n)} \equiv 1\pmod{n}.
-			$$
-		\end{teorema}
+		
+	\end{frame}
+	
+	
+	\begin{frame}
+		Un ejemplo típico de un grafo $G=(V,E)$ es dado por los conjuntos
+		\begin{equation*}\label{grafosimple}
+			V=\{a,b,c,d,z\}, \qquad\quad
+			E=\{\{a,b\},\{a,d\},\{b,z\},\{c,d\},\{d,z\}\}.
+		\end{equation*}\pause
+		Este ejemplo y la definición misma no son demasiado
+		esclarecedores, y solamente cuando con\-si\-de\-ra\-mos la {\it
+			representación pictórica} de un grafo es cuando entendemos un poco más la definición.
+		
+		\pause
+		\begin{figure}[ht]
+			\begin{center}
+				\begin{tikzpicture}[scale=1]
+					%\SetVertexSimple[Shape=circle,FillColor=white]
+					\Vertex[x=0.00, y=2.00]{$a$}
+					\Vertex[x=1.90, y=0.62]{$b$}
+					\Vertex[x=1.18, y=-1.62]{$c$}
+					\Vertex[x=-1.18, y=-1.62]{$d$}
+					\Vertex[x=-1.90, y=0.62]{$z$}
+					\Edges($c$, $d$,$a$,$b$,$z$,$d$)
+				\end{tikzpicture}
+			\end{center}	
+		\end{figure}
+	\end{frame}
+	
+	\begin{frame}
+		
+		\begin{itemize}
+			\item[$\circ$]  La representación pictórica es intuitivamente atractiva
+			pero es claramente inútil cuando deseamos comunicarnos con una computadora.\pause
+			\item[$\circ$] Debemos 	re\-pre\-sen\-tar el grafo mediante cierta clase de lista o tabla.
+		\end{itemize}
+		\vskip .4cm\pause
+		\begin{definicion}
+			Diremos que dos vértices $x$ e $y$ de un grafo son {\em	adyacentes} cuando $\{x,y\}$ es una arista.
+		\end{definicion}
+		\pause
+		\begin{definicion}
+			Podemos representar un grafo $G=(V,E)$ por su {\em lista de	adyacencia}, donde cada vértice $v$ 	encabeza una lista de aquellos vértices que son adyacentes a $v$:
+		\end{definicion}
 		
 		
+		%\vskip.4cm
+		
+	\end{frame}
+	
+	
+	\begin{frame}
+		\begin{ejemplo}
+			Vimos el $G=(V,E)$ es dado por
+			\begin{equation*}\label{grafosimple}
+				V=\{a,b,c,d,z\}, \qquad\quad
+				E=\{\{a,b\},\{a,d\},\{b,z\},\{c,d\},\{d,z\}\}.
+			\end{equation*}
+			\pause	
+			Su lista de adyacencia es 
+			
+			\begin{center}
+				\begin{tabular}{ccccc}
+					$a$&$b$&$c$&$d$&$z$ \\ \hline
+					$b$&$a$&$d$&$a$&$b$ \\
+					$d$&$z$&&$c$&$d$\\
+					&&&$z$&
+				\end{tabular}
+			\end{center}
+			\pause	
+			En Python el grafo estaría representado por la lista de listas\\
+			\begin{equation*}
+				[[b,d],[a,z],[d],[a,c,z],[b,d]].
+			\end{equation*}
+		\end{ejemplo}
+	\end{frame}	
+	
+	
+	\begin{frame}
+		
+		
+		
+		
+		\begin{definicion}
+			Por cada entero positivo $n$ definimos el {\em grafo completo  \index{grafo completo}
+				$K_n$} como el grafo con $n$ vértices y en el cual cada par de vértices es adyacente. 
+		\end{definicion}
+		
+		\vskip.4cm\pause
+		
+		La lista de adyacencia de $K_n$ es unas lista donde en la columna del vértice $i$ están todos los vértices menos $i$ ($n-1$ vértices). 
+		
+		\vskip.4cm\pause
+		
+		
+		?`Cuántas aristas tiene $K_n$? \pause
+		
+		\vskip.2cm\pause
+		
+		De cada vértice ``salen'' $n-1$ aristas, las que van a otros vértices. 
+		\vskip.2cm
+		Si  sumamos $n$-veces las $n-1$ aristas es claro que estamos contando cada arista dos veces, luego el número total de aristas es $n(n-1)/2$.
+		\pause
+		\vskip.2cm
+		Observar que esta es una demostración, usando  grafos, de que $\sum_{i=1}^{n-1} i = n(n-1)/2$.
+		
+		
+	\end{frame}	
+	
+	
+	
+	\begin{frame}
+		
+		\begin{ejemplo} Mario y su mujer Abril dan una
+			fiesta en la cual hay otras cuatro parejas de casados. Las
+			parejas, cuando arriban, estrechan la mano a algunas personas,
+			pero, naturalmente, no se estrechan la mano entre marido y mujer.
+			Cuando la fiesta finaliza el profesor pregunta a los otros a
+			cuantas personas han estrechado la mano, recibiendo $9$ respuestas
+			diferentes. ?`Cuántas personas estrecharon la mano de Abril?
+		\end{ejemplo}\pause
+		\begin{solucion}\pause Construyamos un grafo cuyos vértices son las personas que asisten a la
+			fiesta. Las aristas del grafo son las  $\{x,y\}$ siempre y cuando $x$ e $y$ se
+			hayan estrechado las manos.
+			\vskip.2cm\pause
+			Puesto que hay nueve personas aparte
+			de Mario, y que una persona puede estrechar a lo sumo
+			a otras $8$ personas, se sigue que las $9$ respuestas diferentes que
+			ha recibido el profesor deben ser $0, 1, 2, 3, 4, 5, 6, 7, 8.$
+		\end{solucion}
+		
+		
+	\end{frame}
+	
+	\begin{frame}
+		\begin{figure}[h]
+			\begin{center}
+				\begin{tikzpicture}[scale=2.5]
+					\draw[-,line width=1pt] (0.81,0.59) -- (0.7*0.81,0.7*0.59);
+					\draw[-,line width=1pt] (0.31,0.95) -- (0.04, 0.81) -- (0.31,0.95) -- (0.45, 0.68) -- (0.31,0.95);
+					\draw[-,line width=1pt] (-0.31,0.95) -- (-0.45, 0.68) -- (-0.31,0.95) -- (-0.22, 0.66) -- (-0.31,0.95) -- (-0.04, 0.81) -- (-0.31,0.95);
+					\draw[-,line width=1pt] (-0.81,0.59) -- (-0.76, 0.29) -- (-0.81,0.59) -- (-0.62, 0.36) -- (-0.81,0.59) -- (-0.53, 0.48) -- (-0.81,0.59) -- (-0.51, 0.64) -- (-0.81,0.59);
+					\draw[-,line width=1pt] (-1.0,-0.0) -- (-0.79, -0.21) -- (-1.0,-0.0) -- (-0.72, -0.12) -- (-1.0,-0.0) -- (-0.7, -0.0) -- (-1.0,-0.0) -- (-0.72, 0.11) -- (-1.0,-0.0) -- (-0.79, 0.21) -- (-1.0,-0.0);
+					\draw[-,line width=1pt] (-0.81,-0.59) -- (-0.51, -0.64) -- (-0.81,-0.59) -- (-0.51, -0.54) -- (-0.81,-0.59) -- (-0.54, -0.45) -- (-0.81,-0.59) -- (-0.6, -0.38) -- (-0.81,-0.59) -- (-0.67, -0.32) -- (-0.81,-0.59) -- (-0.76, -0.29) -- (-0.81,-0.59);
+					\draw[-,line width=1pt] (-0.31,-0.95) -- (-0.04, -0.81) -- (-0.31,-0.95) -- (-0.09, -0.75) -- (-0.31,-0.95) -- (-0.15, -0.7) -- (-0.31,-0.95) -- (-0.22, -0.66) -- (-0.31,-0.95) -- (-0.29, -0.65) -- (-0.31,-0.95) -- (-0.37, -0.66) -- (-0.31,-0.95) -- (-0.45, -0.68) -- (-0.31,-0.95);
+					\draw[-,line width=1pt] (0.31,-0.95) -- (0.45, -0.68) -- (0.31,-0.95) -- (0.38, -0.66) -- (0.31,-0.95) -- (0.32, -0.65) -- (0.31,-0.95) -- (0.25, -0.66) -- (0.31,-0.95) -- (0.18, -0.68) -- (0.31,-0.95) -- (0.13, -0.71) -- (0.31,-0.95) -- (0.08, -0.76) -- (0.31,-0.95) -- (0.04, -0.81) -- (0.31,-0.95);
+					
+					\GraphInit[vstyle=Welsh]
+					\Vertices[]{circle}{0,1,2,3,4,5,6,7,8,$M$}
+					\draw (0.6,-0.45) node {?};
+				\end{tikzpicture} 
+			\end{center}
+			\caption{La fiesta de Abril}\label{f5.2}
+		\end{figure}
+	\end{frame}
+	
+	\begin{frame}
+		
+		
+		Ahora, el vértice $8$ alcanza a todos los otros vértices excepto
+		uno, el cual debe por lo tanto representar a la esposa de $8$. Este
+		vértice debe ser el $0$ el cual por cierto que no está unido al $8$
+		(ni ob\-via\-men\-te a ningún otro). 
+		\vskip.2cm\pause
+		Luego $8$ y $0$ son una pareja de
+		casados y $8$ está unido a $1, 2, 3, 4, 5, 6, 7$ y $M$. 
+		\pause
+		En particular el $1$ está unido al $8$ y ésta es la única arista que parte del $1$.
+		\vskip.2cm
+		\pause
+		Por consiguiente $7$ no esta unido al $0$ y al $1$ y sí está unido a $2,3,4$, $5,6,8$ y $M$. La
+		esposa de $7$ debe ser $1$, puesto que $0$ esta casado con $8$.
+		\vskip.2cm
+		\pause
+		Continuando con este razonamiento vemos que $6$ y $2$, y $5$ y $3$ son
+		parejas de casados. 
+		\vskip.2cm\pause
+		Se sigue entonces que $M$ y $4$ están casados,
+		luego el vértice $4$ representa a Abril, quien estrechó la mano de
+		cuatro personas. \qed
 	\end{frame}
 	
 	\begin{frame}
 		\begin{ejemplo}
-			Usar el teorema de Fermat, 2° versión, para calcular el resto de dividir $3^{47}$ por $23$.
+			Los senderos de un jardín han sido diseñados dándoles forma de {\em grafo rueda}
+			$W_n$, cuyos vértices son $V=\{0,1,2,\ldots,n\}$ y sus aristas son
+			$$
+			\begin{aligned}
+				&\{0,1\},\{0,2\},\ldots,\{0,n\}, \\
+				&\{1,2\}, \{2,3\},\ldots,\{n-1,n\},\{n,1\}.
+			\end{aligned}
+			$$
+			\pause
+			Describir una ruta por los senderos de tal forma que empiece y
+			termine en le vértice $0$ y que pase por cada vértice una sola vez.
 		\end{ejemplo}
-		
-		\begin{solucion}
-			Podemos calcular $3^i \equiv a_i \pmod{23}$ para $0 \le i <23$. Como alguno se va a repetir, podemos usar eso para hacer el cálculo.
-			\vskip .3cm 
-			El teorema de Fermat nos evita unos cuantos pasos.
-			\vskip .3cm 
-			Como $23$ es un  número  primo (y  es coprimo con 3)
-			$$
-			3^{22} \equiv 1 \pmod{23},
-			$$
-			Luego
-			\begin{equation*}
-				3^{47} \equiv  3^{22\cdot 2 + 3} \equiv  3^{22\cdot 2} 3^3\equiv  ( 3^{22})^2 3^3\equiv    3^3\equiv   27 \equiv  4 \pmod{23}
-			\end{equation*}
-			Luego  el resto de dividir $3^{47}$ por $23$ es $4$. \qed
-			
-		\end{solucion}
 	\end{frame}
-	
-	\begin{frame}\frametitle{Algoritmo RSA}
-		Dados primos distintos $p$ y $q$ suficientemente grandes tomamos $n = pq$. 
-		\begin{itemize}
-			\item[$\circ$]  Sea $e$ con $1 < e < (p-1)(q-1)$ tal que $$\operatorname{mcd}(e, (p-1)(q-1)) = 1.$$
-			\item[$\circ$]  Sea $d$ tal $0 \le d <(p-1)(q-1)$ y que $$ed \equiv 1 \pmod{(p-1)(q-1)}.$$ 
-		\end{itemize}
-		
-		\begin{proposicion} Si $0 \le m <n$, entonces
-			$$m\equiv m^{ed} \pmod{n}.$$
-		\end{proposicion} 
-		
-		
-	\end{frame}
-	
-	
-	\begin{frame}\frametitle{Algoritmo RSA - procedimiento}
-		
-		Decimos que:
-		\begin{itemize}
-			\item[$\circ$]  $(e,n)$ es la \textit{clave pública.}
-			\item[$\circ$]  $d$ es la \textit{clave privada.}
-		\end{itemize}
-		
-		\vskip .2cm	
-		$A$ le quiere enviar  un mensaje encriptado a $B$.
-		\vskip .2cm			 
-		\textbf{Preliminares}
-		
-		\begin{enumerate}
-			\item[$\circ$] $A$ conoce la clave pública $(e,n)$. 
-			\item[$\circ$] $B$ conoce la clave pública y una clave privada $d$. 
-		\end{enumerate}
-		\vskip .2cm	
-		\textbf{Protocolo }
-		
-		\begin{enumerate}
-			\item[$\circ$] $A$  le quiere enviar el mensaje $m$  a $B$. 
-			\item[$\circ$] $A$ calcula $c \equiv m^e \pmod{n}$ y  le envía $c$ a $B$
-			\item[$\circ$] $B$ descifra el mensaje:  $c^d \equiv (m^e)^d \equiv m \pmod{n}$.
-		\end{enumerate}
-		
-	\end{frame}
-	
 	
 	\begin{frame}
 		
-		\begin{observacion}
-			
-			
-			\begin{itemize}
-				\item[$\circ$]\vskip .4cm	
-				Los dos primos $p$ y $q$ deberían tener alrededor de $100$ dígitos cada uno (longitud considerada segura en este momento).
-				\item[$\circ$]\vskip .4cm	
-				El número $e$ puede elegirse pequeño y se selecciona haciendo prueba y error con el algoritmo de Euclides, es decir probando hasta encontrar un $e$ tal que $\operatorname{mcd}(e, (p-1)(q-1)) = 1$.
-				\item[$\circ$]\vskip .4cm	
-				La existencia de $d$ está garantizada por  la ecuación lineal de congruencia), pues $e$ y $(p-1)(q-1)$ son coprimos.
-			\end{itemize}
-			
-		\end{observacion}
+		\begin{solucion}
+			Primero  dibujemos el grafo para darnos cuenta de por que se llama "rueda". Didujemos $W_6$:\pause
+			\vskip .2cm
+			\begin{figure}
+				\begin{tikzpicture}[scale=0.65]
+					%\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+					%
+					\Vertex[x=0.00, y=0.00]{0}			
+					\Vertex[x=3.00, y=0.00]{1}
+					\Vertex[x=1.50, y=2.60]{2}
+					\Vertex[x=-1.50, y=2.60]{3}
+					\Vertex[x=-3.00, y=0.00]{4}
+					\Vertex[x=-1.50, y=-2.60]{5}
+					\Vertex[x=1.50, y=-2.60]{6}
+					\Edges(1,2,3,4,5,6,1)
+					\Edges(1,0,4) \Edges(2,0,5) \Edges(3,0,6) 
+					
+				\end{tikzpicture}
+			\end{figure}\pause
+			El dibujo nos orienta de como puede ser una ruta: $0,1,2,3,4,5,6,0$. 
+			\vskip .2cm\pause
+			En  general una respuesta es: $0,1,2,3,\cdots,n-1,n,0$.	\qed\end{solucion} 
+		
 	\end{frame}
-	
 	
 	
 \end{document}
