--- a/2021-1/beamer/C19_md1.tex
+++ b/2021-1/beamer/C19_md1.tex
@@ -93,13 +93,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%LETRAS
 
 
-\title[Clase 19 - Grafos 1]{Matemática Discreta I \\ Clase 19 - Grafos 1}
+
+\title[Clase 20 - Grafos 2]{Matemática Discreta I \\ Clase 20 - Grafos 2}
 %\author[C. Olmos / A. Tiraboschi]{Carlos Olmos / Alejandro Tiraboschi}
 \institute[]{\normalsize FAMAF / UNC
 	\\[\baselineskip] ${}^{}$
 	\\[\baselineskip]
 }
-\date[21/05/2020]{21 de mayo de 2020}
+\date[26/05/2020]{26 de mayo de 2020}
 
 
 
@@ -108,73 +109,361 @@
 	
 	\frame{\titlepage} 
 	
-	\begin{frame}\frametitle{Grafos y sus representaciones}
-		Usaremos la siguiente definición en lo que sigue: dado un conjunto $X$ un {\em $2$-subconjunto} es un subconjunto de $X$ de dos elementos.  \pause
-		\vskip .4cm
-		\begin{definicion} Un {\em grafo} $G$ consiste de un  \index{grafo}
-			conjunto finito $V$, cuyos miembros son llamados
-			{\em vértices},  \index{vértices de un grafo}
-			y un conjunto de $2$-subconjuntos de $V$, cuyos miembros son
-			llamados {\em aristas}.  \index{aristas de un grafo}
-			\pause
-			\vskip .4cm
-			Nosotros
-			usualmente escribiremos $G=(V,E)$ y diremos que $V$ es el {\em
-				conjunto de vértices} y $E$ es el {\em conjunto de aristas}.
-		\end{definicion}
+	
+	\begin{frame}\frametitle{Isomorfismo de grafos}
+		¿Cuándo debemos considerar a dos grafos "iguales"?
+		\vskip .4cm\pause
+		\begin{itemize}
+			\item[$\circ$] No importa el  nombre de los vértices. 
+			\vskip .2cm\pause
+			\item[$\circ$] Un grafo se puede dibujar de muchas maneras.
+			\vskip .2cm\pause
+			\item[$\circ$]  La propiedad característica de un grafo es la manera en que los vértices están conectados por aristas. 
+		\end{itemize}
+		\vskip .4cm\pause
+		Dicho en forma directa: vamos a considerar que dos grafos $G_1$ y $G_2$ son "iguales" si  cambiando  el nombre de los vértices de $G_2$  por el de los vértices de $G_1$,  en cierto orden, obtenemos $G_1$.  
 		
 	\end{frame}
 	
+	\begin{frame}
+		\begin{ejemplo} Tenemos dos grafos:
+			\begin{figure}[ht]
+				\begin{center}
+					\begin{tabular}{llll}
+						&
+						\begin{tikzpicture}[scale=1]
+							%\SetVertexSimple[Shape=circle,FillColor=white]
+							\Vertex[x=0,y=0]{$a$}
+							\Vertex[x=2,y=0]{$b$}
+							\Vertex[x=2,y=-2]{$c$}
+							\Vertex[x=0,y=-2]{$d$}
+							\Edges($a$, $b$,$c$,$d$,$a$,$b$,$d$)
+							\draw (1,-3) node {$G_1$};
+						\end{tikzpicture}
+						&
+						\qquad
+						& 
+						\begin{tikzpicture}[scale=1]
+							%\SetVertexSimple[Shape=circle,FillColor=white]
+							\Vertex[x=1,y=0]{$t$}
+							\Vertex[x=1,y=-1.3]{$w$}
+							\Vertex[x=2,y=-2]{$v$}
+							\Vertex[x=0,y=-2]{$u$}
+							\Edges($v$, $t$,$u$,$v$,$w$,$u$)
+							\draw (1,-3) node {$G_2$};
+						\end{tikzpicture}
+					\end{tabular}
+				\end{center}
+			\end{figure}\pause
+			Parecen ser distintos. 
+		\end{ejemplo}
+	\end{frame}
 	
 	\begin{frame}
-		Un ejemplo típico de un grafo $G=(V,E)$ es dado por los conjuntos
-		\begin{equation*}\label{grafosimple}
-			V=\{a,b,c,d,z\}, \qquad\quad
-			E=\{\{a,b\},\{a,d\},\{b,z\},\{c,d\},\{d,z\}\}.
-		\end{equation*}\pause
-		Este ejemplo y la definición misma no son demasiado
-		esclarecedores, y solamente cuando con\-si\-de\-ra\-mos la {\it
-			representación pictórica} de un grafo es cuando entendemos un poco más la definición.
+		Sin embargo, si dibujamos $G_2$ diferente ("dando vuelta $w$" y  rotando), obtenemos: \pause
 		
-		\pause
 		\begin{figure}[ht]
 			\begin{center}
-				\begin{tikzpicture}[scale=1]
-					%\SetVertexSimple[Shape=circle,FillColor=white]
+				\begin{tabular}{llll}
+					&
+					\begin{tikzpicture}[scale=1]
+						%\SetVertexSimple[Shape=circle,FillColor=white]
+						\Vertex[x=0,y=0]{$a$}
+						\Vertex[x=2,y=0]{$b$}
+						\Vertex[x=2,y=-2]{$c$}
+						\Vertex[x=0,y=-2]{$d$}
+						\Edges($a$, $b$,$c$,$d$,$a$,$b$,$d$)
+						\draw (1,-3) node {$G_1$};
+					\end{tikzpicture}
+					&
+					\qquad
+					& 
+					\begin{tikzpicture}[scale=1]
+						%\SetVertexSimple[Shape=circle,FillColor=white]
+						\Vertex[x=0,y=0]{$t$}
+						\Vertex[x=2,y=0]{$v$}
+						\Vertex[x=2,y=-2]{$w$}
+						\Vertex[x=0,y=-2]{$u$}
+						\Edges($v$, $t$,$u$,$v$,$w$,$u$)
+						\draw (1,-3) node {$G_2$};
+					\end{tikzpicture}
+				\end{tabular}
+			\end{center}
+		\end{figure}
+		Los cuales claramente describen el mismo grafo, pero  con los nombres de los vértices cambiados. 
+	\end{frame}
+	
+	\begin{frame}\frametitle{Isomorfismo de grafos: preliminares}
+		
+		\begin{definicion}
+			Dado  dos conjuntos $X,Y$ diremos que una aplicación $f: X \to Y$ es {\em biyectiva} si para cada $y \in Y$ existe un  único $x \in X$ tal que $f(x) =y$. 
+		\end{definicion}
+		\pause
+		
+		Un propiedad importante, de las funciones biyectivas es que $f$ es biyectiva si y sólo sí  $f$ tiene {\em inversa}, es decir existe $f^{-1}: Y \to X$, tal que $f(f^{-1}(y)) = y$, $\forall \,y \in Y$ y $f^{-1}(f(x)) = x$, $\forall \,x \in X$.
+		\pause
+		\begin{ejemplo}
+			La función  
+			\begin{align*}
+				f&: \{1,2,3\}\to\{a,b,c\} \quad \text{definida } f(1) = c, f(2) = b, f(3) = a
+			\end{align*}
+			es biyectiva y su  inversa es 
+			$$
+			f^{-1}(a) = 3,\;f^{-1}(b) = 2,\;f^{-1}(c) =1.
+			$$
+		\end{ejemplo}
+	\end{frame}
+	
+	\begin{frame}\frametitle{Isomorfismos de grafos: definición}
+		\begin{definicion} Dos grafos $G_1$ y $G_2$ se dicen que
+			son {\em isomorfos} cuando  existe una biyección $\alpha$ entre el
+			conjunto de vértices de $G_1$ y el conjunto de vértices de
+			$G_2$ tal que  
+			
+			\begin{itemize}\pause
+				\item[$\circ$] si $\{x,y\}$ es una arista de $G_1$ entonces $\{\alpha(x),\alpha(y)\}$ es una arista de $G_2$ \pause y, recíprocamente,
+				\item[$\circ$]si  $\{z,w\}$ es una arista de $G_2$ entonces $\{\alpha^{-1}(z),\alpha^{-1}(w)\}$ es una arista de $G_1$. 
+			\end{itemize} \pause
+			\vskip .3cm
+			Equivalentemente, diremos que $\alpha$	es un {\em isomorfismo} si es una biyección entre el 	conjunto de vértices de $G_1$ y el conjunto de vértices de
+			$G_2$ tal que por cada $\{z,w\}$  arista de $G_2$,  existe una y solo una $\{x,y\}$  arista de $G_1$ tal que $\{\alpha(x),\alpha(y)\}  = \{z,w\}$.
+			
+		\end{definicion}
+	\end{frame}
+	
+	\begin{frame}
+		\begin{ejemplo}
+			\begin{figure}[ht]
+				\begin{center}
+					\begin{tabular}{llll}
+						&
+						\begin{tikzpicture}[scale=1]
+							%\SetVertexSimple[Shape=circle,FillColor=white]
+							\Vertex[x=0,y=0]{$a$}
+							\Vertex[x=2,y=0]{$b$}
+							\Vertex[x=2,y=-2]{$c$}
+							\Vertex[x=0,y=-2]{$d$}
+							\Edges($a$, $b$,$c$,$d$,$a$,$b$,$d$)
+							\draw (1,-3) node {$G_1$};
+						\end{tikzpicture}
+						&
+						\qquad
+						& 
+						\begin{tikzpicture}[scale=1]
+							%\SetVertexSimple[Shape=circle,FillColor=white]
+							\Vertex[x=1,y=0]{$t$}
+							\Vertex[x=1,y=-1.3]{$w$}
+							\Vertex[x=2,y=-2]{$v$}
+							\Vertex[x=0,y=-2]{$u$}
+							\Edges($v$, $t$,$u$,$v$,$w$,$u$)
+							\draw (1,-3) node {$G_2$};
+						\end{tikzpicture}
+					\end{tabular}
+				\end{center}
+				\caption{$G_1$ y $G_2$ son isomorfos} \label{f5.3}
+			\end{figure}
+			
+			
+			Una biyección es dada por
+			$$
+			\alpha(a)=t,\quad \alpha(b)=v,\quad \alpha(c)=w,\quad \alpha(d)=u.
+			$$
+			Podemos comprobar que a cada arista de $G_1$ le corresponde una
+			arista de $G_2$ y vi\-ce\-ver\-sa.
+		\end{ejemplo}
+	\end{frame}
+	
+	\begin{frame}
+		\begin{itemize}
+			\item Para mostrar que dos grafos no son isomorfos, nosotros debemos
+			demostrar que no hay una biyección entre el conjunto de vértices
+			de uno con el conjunto de vértices de otro, que lleve las aristas
+			de uno en las aristas del otro.\pause
+			\item 	Si dos grafos tienen diferente número de vértices, entonces no es
+			posible ninguna biyección, y los grafos no pueden ser isomorfos.\pause
+			\item Si los grafos tienen el mismo número de vértices, pero di\-fe\-ren\-te
+			número de aristas, entonces hay biyecciones de vértices  pero ninguna de ellas
+			puede ser un isomorfismo. 
+		\end{itemize}
+		
+		
+		
+		
+		
+	\end{frame}
+	
+	\begin{frame}
+		
+		
+		
+		\begin{definicion} 
+			
+			Sea $G=(V,E)$ un grafo. Se dice que $G^{\prime}=(V^{\prime},E^{\prime})$ es {\em subgrafo} de $G=(V,E)$ si 
+			\vskip .2cm
+			(1)  $G^{\prime}$  es un grafo,\quad  y \quad (2) 	$V^{\prime} \subset V$, $E^{\prime} \subset E$.
+			
+		\end{definicion}
+		\pause \vskip .4cm
+		Algunos subgrafos de 
+		\begin{figure}[ht]
+			\begin{center}
+				\begin{tikzpicture}[scale=0.4]
+					\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
 					\Vertex[x=0.00, y=2.00]{$a$}
 					\Vertex[x=1.90, y=0.62]{$b$}
 					\Vertex[x=1.18, y=-1.62]{$c$}
 					\Vertex[x=-1.18, y=-1.62]{$d$}
-					\Vertex[x=-1.90, y=0.62]{$z$}
-					\Edges($c$, $d$,$a$,$b$,$z$,$d$)
+					\Vertex[x=-1.90, y=0.62]{$e$}
+					\Edges($c$, $b$,$a$,$e$,$d$,$b$,$a$,$d$)
+					\Edges($e$,$b$)
 				\end{tikzpicture}
-			\end{center}	
+			\end{center}
 		\end{figure}
+		son:	
+		\begin{figure}[ht]
+			\begin{center}
+				\begin{tabular}{llllllll}
+					&
+					\begin{tikzpicture}[scale=0.4]
+						\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+						\Vertex[x=0.00, y=2.00]{$a$}
+						\Vertex[x=1.90, y=0.62]{$b$}
+						\Vertex[x=-1.18, y=-1.62]{$d$}
+						\Edges($a$,$b$,$d$,$a$)
+					\end{tikzpicture}
+					&
+					\qquad
+					& 
+					\begin{tikzpicture}[scale=0.4]
+						\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+						\Vertex[x=0.00, y=2.00]{$a$}
+						\Vertex[x=1.90, y=0.62]{$b$}
+						\Vertex[x=-1.18, y=-1.62]{$d$}
+						\Vertex[x=-1.90, y=0.62]{$e$}
+						\Edges($a$,$e$,$b$,$a$)
+					\end{tikzpicture}
+					&
+					\qquad
+					&
+					\begin{tikzpicture}[scale=0.4]
+						\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+						\Vertex[x=0.00, y=2.00]{$a$}
+						\Vertex[x=1.90, y=0.62]{$b$}
+						\Vertex[x=1.18, y=-1.62]{$c$}
+						\Vertex[x=-1.18, y=-1.62]{$d$}
+						\Vertex[x=-1.90, y=0.62]{$e$}
+						\Edges($a$,$e$,$b$)
+					\end{tikzpicture}
+					&
+					\qquad
+					&
+					\begin{tikzpicture}[scale=0.4]
+						\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+						\Vertex[x=0.00, y=2.00]{$a$}
+						\Vertex[x=1.90, y=0.62]{$b$}
+						\Vertex[x=-1.18, y=-1.62]{$d$}
+						\Vertex[x=-1.90, y=0.62]{$e$}
+						\Edges( $b$,$a$,$e$,$d$,$b$,$a$,$d$)
+						\Edges($e$,$b$)
+					\end{tikzpicture}
+				\end{tabular}
+			\end{center}
+		\end{figure}
+		
+		
 	\end{frame}
+	
 	
 	\begin{frame}
 		
-		\begin{itemize}
-			\item[$\circ$]  La representación pictórica es intuitivamente atractiva
-			pero es claramente inútil cuando deseamos comunicarnos con una computadora.\pause
-			\item[$\circ$] Debemos 	re\-pre\-sen\-tar el grafo mediante cierta clase de lista o tabla.
-		\end{itemize}
-		\vskip .4cm\pause
-		\begin{definicion}
-			Diremos que dos vértices $x$ e $y$ de un grafo son {\em	adyacentes} cuando $\{x,y\}$ es una arista.
-		\end{definicion}
-		\pause
-		\begin{definicion}
-			Podemos representar un grafo $G=(V,E)$ por su {\em lista de	adyacencia}, donde cada vértice $v$ 	encabeza una lista de aquellos vértices que son adyacentes a $v$:
-		\end{definicion}
-		
-		
-		%\vskip.4cm
+		Es claro, pero  no lo demostraremos aquí, que un isomorfismo lleva un subgrafo a un subgrafo isomorfo. Este resultado es una herramienta que puede ser útil para ver si dos grafos no son isomorfos. \pause
+		\vskip .5cm
+		\begin{figure}[ht]
+			\begin{center}
+				\begin{tabular}{llll}
+					&
+					\begin{tikzpicture}[scale=1]
+						%\SetVertexSimple[Shape=circle,FillColor=white]
+						\Vertex[x=0.00, y=2.00]{$a$}
+						\Vertex[x=1.90, y=0.62]{$b$}
+						\Vertex[x=1.18, y=-1.62]{$c$}
+						\Vertex[x=-1.18, y=-1.62]{$d$}
+						\Vertex[x=-1.90, y=0.62]{$e$}
+						\Edges($c$, $b$,$a$,$e$,$d$,$b$,$a$,$d$)
+						\Edges($e$,$b$)
+						\draw (0,-2.2) node {$G_1$};
+					\end{tikzpicture}
+					&
+					\qquad
+					& 
+					\begin{tikzpicture}[scale=1]
+						%\SetVertexSimple[Shape=circle,FillColor=white]
+						\Vertex[x=0.00, y=2.00]{1}
+						\Vertex[x=1.90, y=0.62]{2}
+						\Vertex[x=1.18, y=-1.62]{3}
+						\Vertex[x=-1.18, y=-1.62]{4}
+						\Vertex[x=-1.90, y=0.62]{5}
+						\Edges(1,2,3,4,5,1)
+						\Edges(4,2,5)
+						\draw (0,-2.2) node {$G_2$};
+					\end{tikzpicture}
+				\end{tabular}
+			\end{center}
+			\caption{$G_1$ y $G_2$ no son isomorfos pues $K_4 \subset G_1$ y $K_4 \not\subset G_2$}
+		\end{figure}
 		
 	\end{frame}
 	
 	
+	
+	\begin{frame}\frametitle{Valencias}
+		La {\em {valencia}} de un vértice $v$ en un grafo $G=(V,E)$ es el
+		\index{valencia de un vértice} número de aristas de $G$ que contienen a $v$.
+		Usaremos la notación $\delta(v)$ para la valencia de $v$,
+		formalmente
+		$$
+		\delta(v)=|D_v|, \quad \text{ donde } \quad D_v=\{e \in E| v\in
+		e\}.
+		$$
+		
+		\begin{ejemplo}
+			\begin{figure}[ht]
+				\begin{center}
+					\begin{tabular}{llll}
+						&\begin{tikzpicture}[scale=0.8]
+							%\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+							\Vertex[x=0.00, y=2.00,L=$3$]{$a$}
+							\Vertex[x=1.90, y=0.62,L=$4$]{$b$}
+							\Vertex[x=1.18, y=-1.62,L=$1$]{$c$}
+							\Vertex[x=-1.18, y=-1.62,L=$3$]{$d$}
+							\Vertex[x=-1.90, y=0.62,L=$3$]{$e$}
+							\Edges($c$, $b$,$a$,$e$,$d$,$b$,$a$,$d$)
+							\Edges($e$,$b$)
+						\end{tikzpicture}
+						&
+						\qquad	\qquad
+						& 
+						\begin{tikzpicture}[scale=0.55]
+							%\SetVertexSimple[Shape=circle,FillColor=white]
+							%				
+							\Vertex[x=3.00, y=0.00, L=$1$]{$v_3$}
+							\Vertex[x=1.50, y=2.60, L=$0$]{$v_2$}
+							\Vertex[x=-1.50, y=2.60, L=$2$]{$v_1$}
+							\Vertex[x=-3.00, y=0.00, L=$2$]{$v_6$}
+							\Vertex[x=-1.50, y=-2.60, L=$3$]{$v_5$}
+							\Vertex[x=1.50, y=-2.60, L=$2$]{$v_4$}
+							\Edges($v_1$,$v_6$, $v_5$,$v_4$,$v_1$)
+							\Edges($v_3$,$v_5$)
+						\end{tikzpicture}
+					\end{tabular}
+				\end{center}
+			\end{figure}
+		\end{ejemplo}
+	\end{frame}
+	
 	\begin{frame}
+		En una lista de adyacencia la valencia de un vértice es exactamente la cantidad de elementos que tiene la columna correspondiente al vértice.
+		
 		\begin{ejemplo}
 			Vimos el $G=(V,E)$ es dado por
 			\begin{equation*}\label{grafosimple}
@@ -193,161 +482,80 @@
 				\end{tabular}
 			\end{center}
 			\pause	
-			En Python el grafo estaría representado por la lista de listas\\
-			\begin{equation*}
-				[[b,d],[a,z],[d],[a,c,z],[b,d]].
-			\end{equation*}
-		\end{ejemplo}
-	\end{frame}	
-	
-	
-	\begin{frame}
-		
-		
-		
-		
-		\begin{definicion}
-			Por cada entero positivo $n$ definimos el {\em grafo completo  \index{grafo completo}
-				$K_n$} como el grafo con $n$ vértices y en el cual cada par de vértices es adyacente. 
-		\end{definicion}
-		
-		\vskip.4cm\pause
-		
-		La lista de adyacencia de $K_n$ es unas lista donde en la columna del vértice $i$ están todos los vértices menos $i$ ($n-1$ vértices). 
-		
-		\vskip.4cm\pause
-		
-		
-		?`Cuántas aristas tiene $K_n$? \pause
-		
-		\vskip.2cm\pause
-		
-		De cada vértice ``salen'' $n-1$ aristas, las que van a otros vértices. 
-		\vskip.2cm
-		Si  sumamos $n$-veces las $n-1$ aristas es claro que estamos contando cada arista dos veces, luego el número total de aristas es $n(n-1)/2$.
-		\pause
-		\vskip.2cm
-		Observar que esta es una demostración, usando  grafos, de que $\sum_{i=1}^{n-1} i = n(n-1)/2$.
-		
-		
-	\end{frame}	
-	
-	
-	
-	\begin{frame}
-		
-		\begin{ejemplo} Mario y su mujer Abril dan una
-			fiesta en la cual hay otras cuatro parejas de casados. Las
-			parejas, cuando arriban, estrechan la mano a algunas personas,
-			pero, naturalmente, no se estrechan la mano entre marido y mujer.
-			Cuando la fiesta finaliza el profesor pregunta a los otros a
-			cuantas personas han estrechado la mano, recibiendo $9$ respuestas
-			diferentes. ?`Cuántas personas estrecharon la mano de Abril?
-		\end{ejemplo}\pause
-		\begin{solucion}\pause Construyamos un grafo cuyos vértices son las personas que asisten a la
-			fiesta. Las aristas del grafo son las  $\{x,y\}$ siempre y cuando $x$ e $y$ se
-			hayan estrechado las manos.
-			\vskip.2cm\pause
-			Puesto que hay nueve personas aparte
-			de Mario, y que una persona puede estrechar a lo sumo
-			a otras $8$ personas, se sigue que las $9$ respuestas diferentes que
-			ha recibido el profesor deben ser $0, 1, 2, 3, 4, 5, 6, 7, 8.$
-		\end{solucion}
-		
-		
-	\end{frame}
-	
-	\begin{frame}
-		\begin{figure}[h]
-			\begin{center}
-				\begin{tikzpicture}[scale=2.5]
-					\draw[-,line width=1pt] (0.81,0.59) -- (0.7*0.81,0.7*0.59);
-					\draw[-,line width=1pt] (0.31,0.95) -- (0.04, 0.81) -- (0.31,0.95) -- (0.45, 0.68) -- (0.31,0.95);
-					\draw[-,line width=1pt] (-0.31,0.95) -- (-0.45, 0.68) -- (-0.31,0.95) -- (-0.22, 0.66) -- (-0.31,0.95) -- (-0.04, 0.81) -- (-0.31,0.95);
-					\draw[-,line width=1pt] (-0.81,0.59) -- (-0.76, 0.29) -- (-0.81,0.59) -- (-0.62, 0.36) -- (-0.81,0.59) -- (-0.53, 0.48) -- (-0.81,0.59) -- (-0.51, 0.64) -- (-0.81,0.59);
-					\draw[-,line width=1pt] (-1.0,-0.0) -- (-0.79, -0.21) -- (-1.0,-0.0) -- (-0.72, -0.12) -- (-1.0,-0.0) -- (-0.7, -0.0) -- (-1.0,-0.0) -- (-0.72, 0.11) -- (-1.0,-0.0) -- (-0.79, 0.21) -- (-1.0,-0.0);
-					\draw[-,line width=1pt] (-0.81,-0.59) -- (-0.51, -0.64) -- (-0.81,-0.59) -- (-0.51, -0.54) -- (-0.81,-0.59) -- (-0.54, -0.45) -- (-0.81,-0.59) -- (-0.6, -0.38) -- (-0.81,-0.59) -- (-0.67, -0.32) -- (-0.81,-0.59) -- (-0.76, -0.29) -- (-0.81,-0.59);
-					\draw[-,line width=1pt] (-0.31,-0.95) -- (-0.04, -0.81) -- (-0.31,-0.95) -- (-0.09, -0.75) -- (-0.31,-0.95) -- (-0.15, -0.7) -- (-0.31,-0.95) -- (-0.22, -0.66) -- (-0.31,-0.95) -- (-0.29, -0.65) -- (-0.31,-0.95) -- (-0.37, -0.66) -- (-0.31,-0.95) -- (-0.45, -0.68) -- (-0.31,-0.95);
-					\draw[-,line width=1pt] (0.31,-0.95) -- (0.45, -0.68) -- (0.31,-0.95) -- (0.38, -0.66) -- (0.31,-0.95) -- (0.32, -0.65) -- (0.31,-0.95) -- (0.25, -0.66) -- (0.31,-0.95) -- (0.18, -0.68) -- (0.31,-0.95) -- (0.13, -0.71) -- (0.31,-0.95) -- (0.08, -0.76) -- (0.31,-0.95) -- (0.04, -0.81) -- (0.31,-0.95);
-					
-					\GraphInit[vstyle=Welsh]
-					\Vertices[]{circle}{0,1,2,3,4,5,6,7,8,$M$}
-					\draw (0.6,-0.45) node {?};
-				\end{tikzpicture} 
-			\end{center}
-			\caption{La fiesta de Abril}\label{f5.2}
-		\end{figure}
-	\end{frame}
-	
-	\begin{frame}
-		
-		
-		Ahora, el vértice $8$ alcanza a todos los otros vértices excepto
-		uno, el cual debe por lo tanto representar a la esposa de $8$. Este
-		vértice debe ser el $0$ el cual por cierto que no está unido al $8$
-		(ni ob\-via\-men\-te a ningún otro). 
-		\vskip.2cm\pause
-		Luego $8$ y $0$ son una pareja de
-		casados y $8$ está unido a $1, 2, 3, 4, 5, 6, 7$ y $M$. 
-		\pause
-		En particular el $1$ está unido al $8$ y ésta es la única arista que parte del $1$.
-		\vskip.2cm
-		\pause
-		Por consiguiente $7$ no esta unido al $0$ y al $1$ y sí está unido a $2,3,4$, $5,6,8$ y $M$. La
-		esposa de $7$ debe ser $1$, puesto que $0$ esta casado con $8$.
-		\vskip.2cm
-		\pause
-		Continuando con este razonamiento vemos que $6$ y $2$, y $5$ y $3$ son
-		parejas de casados. 
-		\vskip.2cm\pause
-		Se sigue entonces que $M$ y $4$ están casados,
-		luego el vértice $4$ representa a Abril, quien estrechó la mano de
-		cuatro personas. \qed
-	\end{frame}
-	
-	\begin{frame}
-		\begin{ejemplo}
-			Los senderos de un jardín han sido diseñados dándoles forma de {\em grafo rueda}
-			$W_n$, cuyos vértices son $V=\{0,1,2,\ldots,n\}$ y sus aristas son
-			$$
-			\begin{aligned}
-				&\{0,1\},\{0,2\},\ldots,\{0,n\}, \\
-				&\{1,2\}, \{2,3\},\ldots,\{n-1,n\},\{n,1\}.
-			\end{aligned}
-			$$
-			\pause
-			Describir una ruta por los senderos de tal forma que empiece y
-			termine en le vértice $0$ y que pase por cada vértice una sola vez.
+			Luego $\delta(a)=2$, $\delta(b)=2$, $\delta(c)=1$, $\delta(d)=3$, $\delta(z)=2$.
+			
 		\end{ejemplo}
 	\end{frame}
 	
 	\begin{frame}
 		
-		\begin{solucion}
-			Primero  dibujemos el grafo para darnos cuenta de por que se llama "rueda". Didujemos $W_6$:\pause
-			\vskip .2cm
-			\begin{figure}
-				\begin{tikzpicture}[scale=0.65]
-					%\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
-					%
-					\Vertex[x=0.00, y=0.00]{0}			
-					\Vertex[x=3.00, y=0.00]{1}
-					\Vertex[x=1.50, y=2.60]{2}
-					\Vertex[x=-1.50, y=2.60]{3}
-					\Vertex[x=-3.00, y=0.00]{4}
-					\Vertex[x=-1.50, y=-2.60]{5}
-					\Vertex[x=1.50, y=-2.60]{6}
-					\Edges(1,2,3,4,5,6,1)
-					\Edges(1,0,4) \Edges(2,0,5) \Edges(3,0,6) 
-					
-				\end{tikzpicture}
-			\end{figure}\pause
-			El dibujo nos orienta de como puede ser una ruta: $0,1,2,3,4,5,6,0$. 
-			\vskip .2cm\pause
-			En  general una respuesta es: $0,1,2,3,\cdots,n-1,n,0$.	\qed\end{solucion} 
+		
+		
+		\begin{teorema}\label{t5.3} La suma de los valores de las valencias
+			$\delta(v)$, tomados sobre todos los vértices $v$ del grafo
+			$G=(V,E)$, es igual a dos veces el número de aristas:
+			$$
+			\sum_{v \in V} \delta(v) = 2|E|.
+			$$
+		\end{teorema}\vskip -.6cm\pause
+		\begin{proof} La valencia de un vértice $v$ indica la cantidad de
+			``extremos'' de aristas que ``tocan'' a $v$. Es claro que hay
+			$2|E|$ extremos de aristas, luego la suma total de las valencias
+			de los vértices es $2|E|$.
+		\end{proof}
+		
 		
 	\end{frame}
 	
+	\begin{frame}
+		Diremos que un vértice de $G$ es {\em impar} si su  valencia es impar, y {\em par} si su valencia es par.
+		\pause\vskip .3cm
+		
+		Denotemos $V_i$ y $V_p$ los conjuntos de vértices impares y pares
+		respectivamente, luego $V=V_i \cup V_p$ es una partición de $V$.\pause
+		Luego
+		$$
+		\sum_{v \in V_i} \delta(v) + \sum_{v \in V_p} \delta(v)= 2|E|.
+		$$ 
+		y entonces
+		$$
+		\sum_{v \in V_i} \delta(v) = 2|E| -  \sum_{v \in V_p} \delta(v).
+		$$ 
+		\pause
+		Luego
+		
+		\begin{teorema} El número de vértices impares es par.
+		\end{teorema}
+		
+		
+	\end{frame}
+	
+	\begin{frame}
+		Este resultado es a veces llamado el ``handshaking lemma'': dado un conjunto de personas, el número de personas
+		que le ha dado la mano a un número impar de miembros del conjunto
+		es par.
+		
+		\vskip .4cm
+		
+		Un grafo en el cual todos los vértices tienen la misma valencia $r$ se llama {\em regular}  (con valencia $r$), o {\em $r$-valente.} Luego, 
+		$$
+		r|V|=2|E|.
+		$$
+		
+		\begin{itemize}
+			\item $K_n$ regular $(n-1)$-valente.
+			\item  $C_n$,  el polígono de $n$-lados. Si $n \ge3$, $C_n$  es regular de valencia $2$. 
+		\end{itemize}
+		
+		\vskip .4cm 
+		
+		$C_n$  es llamado el \textit{grafo cíclico} de $n$ vértices. Formalmente $C_n =(V,E)$, con
+		$$
+		V = \{ 1,2,\ldots,n\}, \qquad E = \{\{1,2\}, \{2,3\}, \ldots , \{n-1,n\},\{n,1\}  \}.
+		$$
+		
+		
+	\end{frame}
 	
 \end{document}
 
