--- a/2021-1/apunte/config-definiciones.tex
+++ b/2021-1/apunte/config-definiciones.tex
@@ -74,6 +74,7 @@
 \newtheorem*{observacion*}{Observaci\'on}
 \newtheorem*{obs*}{Observaci\'on}
 \newtheorem*{nota*}{Nota}
+\newtheorem*{notacion*}{Notaci\'on}
 \newtheorem*{ejemplo*}{Ejemplo}
 \newtheorem*{resultado*}{Resultado}
 \newtheorem*{problema*}{Problema}
