--- a/2021-1/apunte/Cap.04.tex
+++ b/2021-1/apunte/Cap.04.tex
@@ -13,25 +13,82 @@ Claramente esta definición se puede extender a cualquier entero positivo $m$.
 $$
 a \equiv b \pmod{m}
 $$
-si $a-b$ es divisible por $m$.
+si $a-b$ es divisible por $m$, o, escrito de otra forma,  $m|a-b$.
 \end{definicion}
 
 Observar que $a\equiv 0 \pmod{m}$ si  y sólo si $m|a$ y que $a\equiv b \pmod{m}$ si y sólo si $a-b\equiv 0 \pmod{m}$. 
 
+\begin{notacion*}
+    $a \equiv b \pmod{m}$ también  lo denotamos $a \equiv b\; (m)$.
+
+\end{notacion*}
+
+\begin{ejemplo*} Algunos ejemplos  numéricos:
+    \begin{itemize}
+        \item $7 \equiv 3 \;(2)$, pues $2 | 7-3=4$.
+        \item $17 \equiv 8 \;(3)$, pues $3 | 17-8 =9$.  
+        \item $8 \equiv 17 \;(3)$, pues $3 | 8-17 =-9$.
+        \item $35 \equiv 13 \;(11)$, pues $11| 35-13 = 22 = 2 \cdot 11$. 
+    \end{itemize}
+\end{ejemplo*}
+
+
+\begin{proposicion}\label{prop-mod-resto}
+    Sean $a$ entero y $m$ un entero positivo. Sea $r$ el resto de dividir $a$ por $m$,  entonces            
+    $$a\equiv r \pmod{m}.$$\vskip -.6cm
+\end{proposicion}
+\begin{proof}
+     $a=mq+r$  con $0 \le r <m$. Luego,
+     $$a-r = mq \quad \Rightarrow \quad m|a-r\quad \Rightarrow \quad a\equiv r \pmod{m}.$$ 
+\end{proof}
+
+Es fácil verificar que la {congruencia módulo} $m$ es una relación de equivalencia. 
+
+\begin{proposicion} Sea $m$ entero positivo y $x,y,z \in \Z$. Entonces la relación de congruencia es
+    \begin{enumerate}[label=\textit{\alph*)}]
+        \item\label{cong-reflexiva}
+        \textit{{reflexiva}}, es decir $x\equiv x\pmod{m}$,
+        \item\label{cong-simetrica}
+        \textit{{simétrica}}, es decir si $x \equiv y \pmod{m}$, entonces
+        $y \equiv x \pmod{m}$, y 
+        \item\label{cong-transitiva}
+        \textit{{ transitiva}}, es decir si $x\equiv y \pmod{m}$ e
+        $y\equiv z \pmod{m}$, entonces $x\equiv z \pmod{m}$.
+        \end{enumerate}
+\end{proposicion}
+
+\begin{proof} Las tres propiedades son sencillas de demostrar y se deducen de propiedades de ``divide a''.
+
+    \ref{cong-reflexiva}  $m| x-x =0$  y por lo tanto $x\equiv x\pmod{m}$.
+
+    \ref{cong-simetrica} $x \equiv y\;(m)$ $\Rightarrow$ $m|x-y$ $\Rightarrow$  $m|-(x-y)$   $\Rightarrow$  $m|y-x$ $\Rightarrow$ $y \equiv x\; (m)$.
+
+    \ref{cong-transitiva} $x \equiv y \;(m) \wedge y \equiv z \;(m)$ \;  $\Rightarrow$ \; $m|x-y \wedge m|y-z$ \; $\Rightarrow$ \; 
+
+    \quad$m |(x-y) + (y-z) = x -z$ \; $\Rightarrow$ \; $x \equiv z \;(m)$.
+    
+    \qed
+\end{proof}
+
+\begin{observacion*}\label{relacion-de-equivalencia}
+    Dado un conjunto $X$ una relación que cumple las propiedades de ser reflexiva, simétrica y transitiva es llamada una \textit{relación de equivalencia}\index{relación de equivalencia}.
+
+    Ejemplos de relación de equivalencia son la igualdad y  el paralelismo de rectas. Veremos otra relación de equivalencia en el capítulo de grafos.
+\end{observacion*}
+
+Por la proposición \ref{prop-mod-resto} y por ser ``congruencia módulo $m$'' una relación de equivalencia se deduce el siguiente resultado. 
 
 \begin{proposicion}
 Sean $a$ y $b$ enteros y $m$ un entero positivo. Entonces $a\equiv b \pmod{m}$ si  y sólo si $a$ y $b$ tienen el mismo resto en la división por $m$.
 \end{proposicion}
-\begin{proof}
-Si $a=mh+r$ y $b=mk+s$, con $0 \le r,s <m$, podemos suponer, sin perdida de generalidad, que $r \le s$, luego
-$$
-b-a= m(k-h) + (s-r) \qquad \text{con $0\le s - r < m$}.
-$$
-Se sigue que $s-r$ es el resto de dividir $b-a$ por $m$.
+\begin{proof} ($\Rightarrow$)
+Si $a=mh+r$ y $b=mk+s$, con $0 \le r,s <m$, entonces por la proposición \ref{prop-mod-resto} tenemos que
+\begin{equation*}
+    a \equiv r \pmod{m} \quad \wedge \quad     b \equiv s \pmod{m}.
+\end{equation*}
+Por la propiedad transitiva de ``congruencia módulo $m$'', $ r \equiv s \pmod{m}$, luego $p | r-s$.  Podemos suponer, sin perdida de generalidad, que $s \le r$, luego $0\le r-s< m$, lo cual implica que $r-s=0$,  es decir $r=s$. 
 
-Luego si $a\equiv b \pmod{m}$, el resto de dividir   $b-a$ por $m$ es $0$, y por lo tanto $s-r=0$ y $s=r$.
-
-Si $a$ y $b$ tienen el mismo resto en la división por $m$, entonces  $a=mh+r$ y $b=mk+r$, luego $a-b = m(h-k)$ que es divisible por $m$.
+($\Leftarrow$) Si $a$ y $b$ tienen el mismo resto en la división por $m$, entonces  $a=mh+r$ y $b=mk+r$, luego $a-b = m(h-k)$ que es divisible por $m$.
 \end{proof}
 
 Así como antes podíamos separar $\mathbb Z$ en los números pares e impares, la propiedad anterior nos permite expresar $\mathbb Z$ como una unión disjunta de $m$ subconjuntos. Es decir si $\mathbb  Z_{[r]} =\{x \in \mathbb Z:$ el resto de dividir $x$ por $m$ es $r\}$, entonces dado $m \in \mathbb N$, 
@@ -39,27 +96,9 @@ $$
 \mathbb Z= \mathbb Z_{[0]}\cup \mathbb Z_{[1]}\cup \cdots\cup \mathbb Z_{[m-1]}.
 $$
 
-Es fácil verificar que la {congruencia módulo} $m$ verifica las siguientes propiedades
-\begin{enumerate}[label=\textit{\alph*)}]
-\item
-Es \textit{{reflexiva}} es decir $x\equiv x\pmod{m}$.
-\item
-Es \textit{{simétrica}}, es decir si $x \equiv y \pmod{m}$, entonces
-$y \equiv x \pmod{m}$.
-\item
-Es \textit{{ transitiva}}, es decir si $x\equiv y \pmod{m}$ e
-$y\equiv z \pmod{m}$, entonces $x\equiv z \pmod{m}$.
-\end{enumerate}
-\begin{proof}
-La primera propiedad es debido a que $x-x$ es cero y por lo tanto divisible por $m$. La segunda se debe a que si $x-y=km$, entonces $y-x=(-k)m$. Finalmente, podemos demostrar la tercera de la siguiente forma,  puesto que $x-y=km$ y $y-z=lm$, tenemos que $x-z=(x-y)+(y-z)=(k+l)m$.
-\end{proof}
 %\vskip .3cm 
 
-\begin{observacion*}\label{relacion-de-equivalencia}
-    Dado un conjunto $X$ una relación que cumple las propiedades de ser reflexiva, simétrica y transitiva es llamada una \textit{relación de equivalencia}\index{relación de equivalencia}.
 
-    Ejemplos de relación de equivalencia son la igualdad y  el paralelismo de rectas. Veremos otra relación de equivalencia en el capítulo de grafos.
-\end{observacion*}
 
 La utilidad de las congruencias reside principalmente en el hecho de que son compatibles con las operaciones aritméticas. Específicamente, tenemos el siguiente teorema.
 
@@ -76,30 +115,27 @@ Entonces
 \end{enumerate}
 \end{teorema}
 \begin{proof}
-\
+La hipótesis nos dice que 
+\begin{equation*}
+    m | x_1 - x_2 \qquad \wedge \qquad m | y_1 - y_2.
+\end{equation*}
 
-\ref{it.con.prop_a} Por hipótesis tenemos que existen enteros
-$x,y$ tales que $x_1-x_2=mx$ e $y_1-y_2=my$. Se sigue que
+\ref{it.con.prop_a} Como $m | x_1 - x_2$ y $m | y_1 - y_2$,  entonces 
+$$
+m |  (x_1 - x_2) + (y_1 - y_2) = (x_1 +y_1) -(x_2+y_2).
+$$
+Es decir, $ x_1+ y_1 \equiv x_2+ y_2 \pmod{m}$. 
+
+\ref{it.con.prop_b} Aquí tenemos,
 $$
 \begin{aligned}
-(x_1+y_1)-(x_2+y_2) &= (x_1-x_2)+ (y_1 -y_2) \\
-&= mx +my \\
-&= m(x+y),
+    m | x_1 - x_2  \wedge  m | y_1 - y_2 &\Rightarrow m | (x_1 - x_2)y_1  \wedge  m | x_2(y_1 - y_2) \\
+    &\Rightarrow m | (x_1 - x_2)y_1 + x_2(y_1 - y_2) \\
+    &\Rightarrow m | x_1y_1 - x_2y_1  + x_2y_1 - x_2y_2 \\
+    &\Rightarrow m | x_1y_1  - x_2y_2.
 \end{aligned}
 $$
-y por consiguiente el lado izquierdo es divisible por $m$, como
-queríamos demostrar.
-
-\ref{it.con.prop_b} Aquí tenemos
-$$
-\begin{aligned}
-x_1y_1-x_2y_2 &=  x_1y_1-x_2y_1+ x_2y_1-x_2y_2 \\
-&= (x_1-x_2)y_1+ x_2(y_1 -y_2) \\
-&= mxy_1 +x_2my \\
-&= m(xy_1+x_2y),
-\end{aligned}
-$$
-y de nuevo el lado izquierdo es divisible por $m$.
+Luego $ x_1 y_1 \equiv x_2 y_2 \pmod{m}$.
 
 \ref{it.con.prop_c}  Lo haremos por inducción sobre $j$. 
 
